--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "redis-memory-server": "^0.11.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.6",
@@ -28,7 +29,6 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "redis-memory-server": "^0.11.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
